<?xml version="1.0" encoding="utf-8"?>
<!--ASL Intermediate Spelling Bee layout-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntermediateSpellingBeeActivity">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/asl_fingerspelling_bee_logo"
        android:src="@drawable/asl_fingerspelling_bee_logo" />

    <TextView
        android:id="@+id/intermediateSpellingBeeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/logoView"
        android:layout_marginBottom="-13dp"
        android:gravity="center"
        android:text="@string/asl_intermediate_spellingbee"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ViewFlipper
        android:id="@+id/handsign_flipper"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignTop="@id/intermediateSpellingBeeHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:id="@+id/beeInstructions"
        android:layout_width="272dp"
        android:layout_height="34dp"
        android:layout_alignBottom="@id/handsign_flipper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="-35dp"
        android:gravity="center"
        android:text="@string/type_word"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/guessWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/beeInstructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="-47dp"
        android:ems="10"
        android:hint="@string/enter_guess"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/guessWord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-53dp"
        android:onClick="onClickSubmit"
        android:text="@string/submit" />

    <Button
        android:id="@+id/nextWordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/guessWord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-53dp"
        android:onClick="onClickNextWord"
        android:text="@string/next_word" />

    <TextView
        android:id="@+id/checkAnswerText"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_alignBottom="@id/guessWord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-164dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/speedSeekBar"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignBottom="@id/nextWordButton"
        android:layout_marginBottom="-75dp"
        android:max="2000"
        android:progress="1000" />

    <TextView
        android:id="@+id/slowerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/speedSeekBar"
        android:layout_alignParentLeft="true"
        android:paddingLeft="20dp"
        android:text="@string/slower" />

    <TextView
        android:id="@+id/numberOfSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/speedSeekBar"
        android:layout_centerHorizontal="true"
        android:text="1.5 seconds per letter" />

    <TextView
        android:id="@+id/fasterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/speedSeekBar"
        android:layout_alignParentRight="true"
        android:paddingRight="20dp"
        android:text="@string/faster" />

</RelativeLayout>