<?xml version="1.0" encoding="utf-8"?>
<!--Sink or Sign Layout-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinkOrSignActivity">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/asl_fingerspelling_bee_logo"
        android:src="@drawable/asl_fingerspelling_bee_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sinkorsignheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sink_or_sign"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <ImageView
        android:id="@+id/sharkattack"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/shark_is_coming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sinkorsignheading"
        app:srcCompat="@drawable/shark1"/>

    <ImageView
        android:id="@+id/letterGraphic1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/letterGraphic2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/letterGraphic1"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/letterGraphic3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/letterGraphic2"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/letterGraphic4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/letterGraphic3"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/letterGraphic5"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic4"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/letterGraphic6"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic5"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/letterGraphic7"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic6"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>

    <ImageView
        android:id="@+id/letterGraphic8"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic7"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>

    <ImageView
        android:id="@+id/letterGraphic9"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic8"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>

    <ImageView
        android:id="@+id/letterGraphic10"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic9"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>

    <ImageView
        android:id="@+id/letterGraphic11"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic10"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>

    <ImageView
        android:id="@+id/letterGraphic12"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic11"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>

    <ImageView
        android:id="@+id/letterGraphic13"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@id/letterGraphic12"
        app:layout_constraintTop_toBottomOf="@+id/sharkattack"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/line"/>


    <TextView
        android:id="@+id/gameProgressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/letterGraphic13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letterGraphic6" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SinkOrSignActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letterGraphic6"
        app:layout_constraintStart_toStartOf="parent">

            <!--Table for American Manual Alphabet-->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow
                    android:paddingTop = "10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/a"
                        android:contentDescription="a"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/b"
                        android:contentDescription="b"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/c"
                        android:contentDescription="c"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/d"
                        android:contentDescription="d"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/e"
                        android:contentDescription="e"
                        android:onClick="onClickSign"/>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/f"
                        android:contentDescription="f"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/g"
                        android:contentDescription="g"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/h"
                        android:contentDescription="h"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/i"
                        android:contentDescription="i"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/j"
                        android:contentDescription="j"
                        android:onClick="onClickSign"/>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/k"
                        android:contentDescription="k"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/l"
                        android:contentDescription="l"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/m"
                        android:contentDescription="m"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/n"
                        android:contentDescription="n"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/o"
                        android:contentDescription="o"
                        android:onClick="onClickSign"/>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/p"
                        android:contentDescription="p"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/q"
                        android:contentDescription="q"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/r"
                        android:contentDescription="r"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/s"
                        android:contentDescription="s"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/t"
                        android:contentDescription="t"
                        android:onClick="onClickSign"/>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/u"
                        android:contentDescription="u"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/v"
                        android:contentDescription="v"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/w"
                        android:contentDescription="w"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/x"
                        android:contentDescription="x"
                        android:onClick="onClickSign"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/y"
                        android:contentDescription="y"
                        android:onClick="onClickSign"/>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:src="@drawable/z"
                        android:contentDescription="z"
                        android:onClick="onClickSign"/>

                </TableRow>

            </TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNextWord"
        android:text="@string/next_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <ImageView
        android:id="@+id/instructionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClickInstructionsListener"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>